feat(autiva):目录树文件颜色显示